--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,14 +86,13 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/editTextText"
+            android:id="@+id/userName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="70dp"
             android:ems="10"
             android:inputType="text"
-            android:text="Email or username"
-            android:textColor="#EEEEEE"
+            android:textColor="#000000"
             android:textColorHighlight="#200D0D" />
 
         <LinearLayout
@@ -123,18 +122,17 @@
         </LinearLayout>
 
         <EditText
-            android:id="@+id/editTextTextPassword"
+            android:id="@+id/userPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="70dp"
             android:ems="10"
             android:inputType="textPassword"
-            android:text="**********"
             android:textAlignment="viewEnd"
-            android:textColor="#EEEEEE" />
+            android:textColor="#000000" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/btnSignIn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="70dp"
@@ -143,7 +141,7 @@
             android:text="Sign in" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/textRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="70dp"
