--- a/app/src/main/res/layout/layout_registro.xml
+++ b/app/src/main/res/layout/layout_registro.xml
@@ -119,7 +119,7 @@
         android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnCreateAccount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="50dp"
