--- a/app/src/main/res/layout/activity_view_register.xml
+++ b/app/src/main/res/layout/activity_view_register.xml
@@ -29,8 +29,7 @@
         android:drawableLeft="@mipmap/usuario"
         android:ems="10"
         android:inputType="text"
-        android:text="Firstname"
-        android:textColor="#EEEEEE" />
+        android:textColor="#2B3A55" />
 
     <TextView
         android:id="@+id/textView8"
@@ -48,8 +47,7 @@
         android:drawableLeft="@mipmap/usuario"
         android:ems="10"
         android:inputType="text"
-        android:text="Lastname"
-        android:textColor="#EEEEEE" />
+        android:textColor="#2B3A55" />
 
     <TextView
         android:id="@+id/textView11"
@@ -65,8 +63,11 @@
         android:layout_height="40dp"
         android:layout_marginHorizontal="50dp"
         android:drawableLeft="@mipmap/pastel"
+        android:editable="false"
         android:ems="10"
-        android:inputType="date" />
+        android:focusable="false"
+        android:inputType="date"
+        android:textColor="#2B3A55" />
 
     <TextView
         android:id="@+id/textView12"
@@ -83,7 +84,8 @@
         android:layout_marginHorizontal="50dp"
         android:drawableLeft="@mipmap/email"
         android:ems="10"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:textColor="#2B3A55" />
 
     <TextView
         android:id="@+id/textView13"
@@ -100,7 +102,8 @@
         android:layout_marginHorizontal="50dp"
         android:drawableLeft="@mipmap/candadoabierto"
         android:ems="10"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColor="#2B3A55" />
 
     <TextView
         android:id="@+id/textView14"
@@ -116,10 +119,26 @@
         android:layout_marginHorizontal="50dp"
         android:drawableLeft="@mipmap/candado"
         android:ems="10"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColor="#2B3A55" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="50dp"
+        android:text="Gender" />
+
+    <Spinner
+        android:id="@+id/genero"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="50dp"
+        android:layout_marginTop="10dp"
+        android:entries="@array/Genero" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnCreateAccount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="50dp"
